                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 19-02-2005 added: System.CPUTemperature, System.GPUTemperature, and System.FanSpeed to the infoManager.
  - 19-02-2005 changed: audiobuffer sizes for smoother pal video
  - 19-02-2005 added: Option to disable thumbnail generation during picture viewing.
  - 19-02-2005 fixed: LCD: last bar of the progress is now shown
  - 19-02-2005 fixed: LCD: execution-timing for the LCD and SmartXX (sometimes the display crashs, hope it's fixed now)
  - 19-02-2005 fixed: LCD: backlight-fix for the X3-LCD (thnx to GreenGian and SniperKil for testing)
  - 19-02-2005 added: Smooth progress bar for the HD44780 (stop-symbol was not used) (thnx to GreenGian and SniperKil to make it smooth)
  - 19-02-2005 cleanup: LCD progress bar code moved to LCD class
  - 18-02-2005 fixed: <allowoverlay> doesn't work in music songs
  - 18-02-2005 fixed: Localization of UV data in weather.
  - 18-02-2005 fixed: crash bug in thumbpanels when switching from large->small without resetting current focus.
  - 18-02-2005 added: progress bar for the LCD (smooth on KS0073, on HD44780 later)
  - 18-02-2005 added: LCD option for HD44780/KS0073 controllers
  - 17-02-2005 fixed: dialog select doesn't free its items when it is closed
  - 17-02-2005 fixed: black screen when going from visualisation -> other window -> press stop -> press back  
  - 17-02-2005 updated: Finnish language file (Thnx to jutski)
  - 16-02-2005 updated: German language file
  - 16-02-2005 updated: Norwegian language file (Thnx to vnmartinsen)
  - 16-02-2005 updated: Italian language file (Thnx to kotix)
  - 16-02-2005 updated: German (Austrian) language file (Thnx to CEOMR)